--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -86,6 +86,58 @@
     .order{
         border-radius: 0 0 50px 0;
     }
+}
+
+@media all and (max-width: 600px){
+    .option-row i{
+        font-size: 30px;
+    }
+    button.primary{
+        scale: .9;
+        padding: 0;
+    }
+    .cus-add-button{
+        padding-right: .2rem;
+    }
+}
 
 
+@media all and (max-width: 400px){
+    .option-row i{
+        font-size: 25px;
+    }
+    button.primary{
+        scale: .8;
+        padding: 0;
+    }
+    .cus-add-button{
+        padding-right: 0;
+    }
+}
+
+@media all and (max-width: 600px){
+    .option-row i{
+        font-size: 30px;
+    }
+    button.primary{
+        scale: .9;
+        padding: 0;
+    }
+    .item-add-button{
+        padding-right: .2rem;
+    }
+}
+
+
+@media all and (max-width: 400px){
+    .option-row i{
+        font-size: 25px;
+    }
+    button.primary{
+        scale: .8;
+        padding: 0;
+    }
+    .item-add-button{
+        padding-right: 0;
+    }
 }
